--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.14",
     "multer": "^1.4.2",
+    "react-native-screens": "^3.2.0",
     "sqlite3": "^5.0.0"
   }
 }
