--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.14",
-    "lodash": "4.17.20",
+    "lodash": "^4.17.21",
     "multer": "^1.4.2",
     "react-native-screens": "^3.2.0",
     "sqlite3": "^5.0.0"
